# quadcopter

./: CMakeLists.txt  Quadcopter_FC.cpp  README.md  accel_test.c  comp_filter_test.c  mahony_filter.c  mahony_filter_lib.hpp  mpu6050_lib.hpp  out_imu_data_txt.c  pwm_lib.hpp  test_imu_main.c  user_input_test.c
imu/: CMakeLists.txt
mpu6050_i2c/: CMakeLists.txt  mpu6050_i2c.c
mpu6050lib/: CMakeLists.txt  mpu6050.c  mpu6050.h
